[package]
name = "godot_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "string"] }
rust-ini = "0.21.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"